# Pixelle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  specs.txt
cmake/: Util.cmake
include-tcc/pixelle/util/: Math.tcc  Util.tcc
include/pixelle/: Engine.h
include/pixelle/graphics/: GraphicsAPI.h  RenderObject.h  Texture.h
include/pixelle/graphics/renderObjects/: PixelRenderObject.h  ShapeRenderObject.h  SpriteRenderObject.h
include/pixelle/internal/: gl_meta.h  zlib.h
include/pixelle/internal/gl/: shader.h
include/pixelle/resources/: Resource.h
include/pixelle/scenes/: Scene.h
include/pixelle/util/: Colour.h  Exception.h  Math.h  Util.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
src/: Engine.cpp
src/graphics/gl/: GraphicsAPI.cpp  RenderObject.cpp  Texture.cpp
src/graphics/gl/render_object/: PixelRenderObject.cpp  ShapeRenderObject.cpp
src/resources/: Resource.cpp
src/util/: Colour.cpp  Exception.cpp  Math.cpp  Util.cpp  Util_linux.cpp
test/: CMakeLists.txt  game.cpp
tools/resources/: CMakeLists.txt
tools/resources/include/pixelle-resources/: Interface.h  Manifest.h
tools/resources/src/: Manifest.cpp  main.cpp
tools/resources/src/actions/: help.cpp  init.cpp
